--- a/public/pages/cart.html
+++ b/public/pages/cart.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register - Ecommerce Tailwind</title>
+    <title>Cart - Ecommerce Tailwind</title>
 
     <link rel="shortcut icon" href="../assets/images/favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -13,11 +13,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap"
-        rel="stylesheet">
-
-    <link rel="stylesheet" href="../../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -45,17 +41,15 @@
                         <i class="fa-regular fa-heart"></i>
                     </div>
                     <div class="text-xs leading-3">Wishlist</div>
-                    <div
-                        class="absolute right-0 -top-1 w-5 h-5 rounded-full flex items-center justify-center bg-primary text-white text-xs">
+                    <div class="absolute right-0 -top-1 w-5 h-5 rounded-full flex items-center justify-center bg-primary text-white text-xs">
                         8</div>
                 </a>
-                <a href="cart.html" class="text-center text-gray-700 hover:text-primary transition relative">
+                <a href="cart.html" class="text-center text-primary transition relative">
                     <div class="text-2xl">
                         <i class="fa-solid fa-bag-shopping"></i>
                     </div>
                     <div class="text-xs leading-3">Cart</div>
-                    <div
-                        class="absolute -right-3 -top-1 w-5 h-5 rounded-full flex items-center justify-center bg-primary text-white text-xs">
+                    <div class="absolute -right-3 -top-1 w-5 h-5 rounded-full flex items-center justify-center bg-primary text-white text-xs">
                         2</div>
                 </a>
                 <a href="account.html" class="text-center text-gray-700 hover:text-primary transition relative">
@@ -78,32 +72,18 @@
                 </span>
                 <span class="capitalize ml-2 text-white">All Categories</span>
 
-                <!-- dropdown -->
-                <div
-                    class="absolute w-full left-0 top-full bg-white shadow-md py-3 divide-y divide-gray-300 divide-dashed opacity-0 group-hover:opacity-100 transition duration-300 invisible group-hover:visible">
+                <div class="absolute w-full left-0 top-full bg-white shadow-md py-3 divide-y divide-gray-300 divide-dashed opacity-0 group-hover:opacity-100 transition duration-300 invisible group-hover:visible">
                     <a href="#" class="flex items-center px-6 py-3 hover:bg-gray-100 transition">
                         <img src="../assets/images/icons/sofa.svg" alt="sofa" class="w-5 h-5 object-contain">
                         <span class="ml-6 text-gray-600 text-sm">Sofa</span>
                     </a>
                     <a href="#" class="flex items-center px-6 py-3 hover:bg-gray-100 transition">
                         <img src="../assets/images/icons/terrace.svg" alt="terrace" class="w-5 h-5 object-contain">
-                        <span class="ml-6 text-gray-600 text-sm">Terarce</span>
+                        <span class="ml-6 text-gray-600 text-sm">Terrace</span>
                     </a>
                     <a href="#" class="flex items-center px-6 py-3 hover:bg-gray-100 transition">
                         <img src="../assets/images/icons/bed.svg" alt="bed" class="w-5 h-5 object-contain">
                         <span class="ml-6 text-gray-600 text-sm">Bed</span>
-                    </a>
-                    <a href="#" class="flex items-center px-6 py-3 hover:bg-gray-100 transition">
-                        <img src="../assets/images/icons/office.svg" alt="office" class="w-5 h-5 object-contain">
-                        <span class="ml-6 text-gray-600 text-sm">office</span>
-                    </a>
-                    <a href="#" class="flex items-center px-6 py-3 hover:bg-gray-100 transition">
-                        <img src="../assets/images/icons/outdoor-cafe.svg" alt="outdoor" class="w-5 h-5 object-contain">
-                        <span class="ml-6 text-gray-600 text-sm">Outdoor</span>
-                    </a>
-                    <a href="#" class="flex items-center px-6 py-3 hover:bg-gray-100 transition">
-                        <img src="../assets/images/icons/bed-2.svg" alt="Mattress" class="w-5 h-5 object-contain">
-                        <span class="ml-6 text-gray-600 text-sm">Mattress</span>
                     </a>
                 </div>
             </div>
@@ -115,79 +95,129 @@
                     <a href="#" class="text-gray-200 hover:text-white transition">About us</a>
                     <a href="#" class="text-gray-200 hover:text-white transition">Contact us</a>
                 </div>
-                <a href="login.html" class="text-gray-200 hover:text-white transition">Login</a>
+                <a href="login.html" class="text-gray-200 hover:text-white transition">Login/Register</a>
             </div>
         </div>
     </nav>
     <!-- ./navbar -->
 
-    <!-- login -->
-    <div class="contain py-16">
-        <div class="max-w-lg mx-auto shadow px-6 py-7 rounded overflow-hidden">
-            <h2 class="text-2xl uppercase font-medium mb-1">Create an account</h2>
-            <p class="text-gray-600 mb-6 text-sm">
-                Register for new cosutumer
-            </p>
-            <form action="#" method="post" autocomplete="off">
-                <div class="space-y-2">
-                    <div>
-                        <label for="name" class="text-gray-600 mb-2 block">Full Name</label>
-                        <input type="text" name="name" id="name"
-                            class="block w-full border border-gray-300 px-4 py-3 text-gray-600 text-sm rounded focus:ring-0 focus:border-primary placeholder-gray-400"
-                            placeholder="fulan fulana">
-                    </div>
-                    <div>
-                        <label for="email" class="text-gray-600 mb-2 block">Email address</label>
-                        <input type="email" name="email" id="email"
-                            class="block w-full border border-gray-300 px-4 py-3 text-gray-600 text-sm rounded focus:ring-0 focus:border-primary placeholder-gray-400"
-                            placeholder="youremail.@domain.com">
-                    </div>
-                    <div>
-                        <label for="password" class="text-gray-600 mb-2 block">Password</label>
-                        <input type="password" name="password" id="password"
-                            class="block w-full border border-gray-300 px-4 py-3 text-gray-600 text-sm rounded focus:ring-0 focus:border-primary placeholder-gray-400"
-                            placeholder="*******">
-                    </div>
-                    <div>
-                        <label for="confirm" class="text-gray-600 mb-2 block">Confirm password</label>
-                        <input type="password" name="confirm" id="confirm"
-                            class="block w-full border border-gray-300 px-4 py-3 text-gray-600 text-sm rounded focus:ring-0 focus:border-primary placeholder-gray-400"
-                            placeholder="*******">
-                    </div>
-                </div>
-                <div class="mt-6">
-                    <div class="flex items-center">
-                        <input type="checkbox" name="aggrement" id="aggrement"
-                            class="text-primary focus:ring-0 rounded-sm cursor-pointer">
-                        <label for="aggrement" class="text-gray-600 ml-3 cursor-pointer">I have read and agree to the <a
-                                href="#" class="text-primary">terms & conditions</a></label>
-                    </div>
-                </div>
-                <div class="mt-4">
-                    <button type="submit"
-                        class="block w-full py-2 text-center text-white bg-primary border border-primary rounded hover:bg-transparent hover:text-primary transition uppercase font-roboto font-medium">create
-                        account</button>
-                </div>
-            </form>
-
-            <!-- login with -->
-            <div class="mt-6 flex justify-center relative">
-                <div class="text-gray-600 uppercase px-3 bg-white z-10 relative">Or signup with</div>
-                <div class="absolute left-0 top-3 w-full border-b-2 border-gray-200"></div>
-            </div>
-            <div class="mt-4 flex gap-4">
-                <a href="#"
-                    class="w-1/2 py-2 text-center text-white bg-blue-800 rounded uppercase font-roboto font-medium text-sm hover:bg-blue-700">facebook</a>
-                <a href="#"
-                    class="w-1/2 py-2 text-center text-white bg-red-600 rounded uppercase font-roboto font-medium text-sm hover:bg-red-500">google</a>
-            </div>
-            <!-- ./login with -->
-
-            <p class="mt-4 text-center text-gray-600">Already have account? <a href="login.html"
-                    class="text-primary">Login now</a></p>
-        </div>
+    <!-- breadcrumb -->
+    <div class="container py-4 flex items-center gap-3">
+        <a href="../index.html" class="text-primary text-base">
+            <i class="fa-solid fa-house"></i>
+        </a>
+        <span class="text-sm text-gray-400">
+            <i class="fa-solid fa-chevron-right"></i>
+        </span>
+        <p class="text-gray-600 font-medium">Shopping Cart</p>
     </div>
-    <!-- ./login -->
+    <!-- ./breadcrumb -->
+
+    <!-- cart wrapper -->
+    <div class="container grid grid-cols-12 items-start gap-6 pt-4 pb-16">
+        <!-- cart -->
+        <div class="col-span-9">
+            <div class="space-y-4">
+                <!-- single cart item -->
+                <div class="flex items-center justify-between border gap-6 p-4 border-gray-200 rounded">
+                    <div class="w-28">
+                        <img src="../assets/images/products/product6.jpg" alt="product 6" class="w-full">
+                    </div>
+                    <div class="w-1/3">
+                        <h2 class="text-gray-800 text-xl font-medium uppercase">Italian L shape</h2>
+                        <p class="text-gray-500 text-sm">Availability: <span class="text-green-600">In Stock</span></p>
+                    </div>
+                    <div>
+                        <div class="flex border border-gray-300 text-gray-600 divide-x divide-gray-300 w-max">
+                            <button class="h-8 w-8 text-xl flex items-center justify-center cursor-pointer select-none">-</button>
+                            <input class="h-8 w-14 text-base text-center" type="text" value="1" />
+                            <button class="h-8 w-8 text-xl flex items-center justify-center cursor-pointer select-none">+</button>
+                        </div>
+                    </div>
+                    <div class="text-primary text-lg font-semibold">$320.00</div>
+                    <div class="text-gray-600 cursor-pointer hover:text-primary">
+                        <i class="fa-solid fa-trash"></i>
+                    </div>
+                </div>
+                <!-- ./single cart item -->
+
+                <!-- single cart item -->
+                <div class="flex items-center justify-between border gap-6 p-4 border-gray-200 rounded">
+                    <div class="w-28">
+                        <img src="../assets/images/products/product5.jpg" alt="product 5" class="w-full">
+                    </div>
+                    <div class="w-1/3">
+                        <h2 class="text-gray-800 text-xl font-medium uppercase">Dining Table</h2>
+                        <p class="text-gray-500 text-sm">Availability: <span class="text-green-600">In Stock</span></p>
+                    </div>
+                    <div>
+                        <div class="flex border border-gray-300 text-gray-600 divide-x divide-gray-300 w-max">
+                            <button class="h-8 w-8 text-xl flex items-center justify-center cursor-pointer select-none">-</button>
+                            <input class="h-8 w-14 text-base text-center" type="text" value="1" />
+                            <button class="h-8 w-8 text-xl flex items-center justify-center cursor-pointer select-none">+</button>
+                        </div>
+                    </div>
+                    <div class="text-primary text-lg font-semibold">$320.00</div>
+                    <div class="text-gray-600 cursor-pointer hover:text-primary">
+                        <i class="fa-solid fa-trash"></i>
+                    </div>
+                </div>
+                <!-- ./single cart item -->
+            </div>
+        </div>
+        <!-- ./cart -->
+
+        <!-- order summary -->
+        <div class="col-span-3">
+            <div class="border border-gray-200 p-4 rounded">
+                <h4 class="text-gray-800 text-lg mb-4 font-medium uppercase">Order Summary</h4>
+                <div class="space-y-2">
+                    <div class="flex justify-between">
+                        <div>
+                            <h5 class="text-gray-800 font-medium">Italian L Shape</h5>
+                            <p class="text-sm text-gray-600">Size: L</p>
+                        </div>
+                        <p class="text-gray-600">x1</p>
+                        <p class="text-gray-800 font-medium">$320</p>
+                    </div>
+                    <div class="flex justify-between">
+                        <div>
+                            <h5 class="text-gray-800 font-medium">Dining Table</h5>
+                            <p class="text-sm text-gray-600">Size: M</p>
+                        </div>
+                        <p class="text-gray-600">x1</p>
+                        <p class="text-gray-800 font-medium">$320</p>
+                    </div>
+                </div>
+
+                <div class="flex justify-between border-b border-gray-200 text-gray-800 font-medium py-3 uppercas">
+                    <p>Subtotal</p>
+                    <p>$640</p>
+                </div>
+
+                <div class="flex justify-between border-b border-gray-200 text-gray-800 font-medium py-3 uppercas">
+                    <p>Shipping</p>
+                    <p>Free</p>
+                </div>
+
+                <div class="flex justify-between text-gray-800 font-medium py-3 uppercas">
+                    <p class="font-semibold">Total</p>
+                    <p>$640</p>
+                </div>
+
+                <div class="flex items-center mb-4 mt-2">
+                    <input type="text" class="pl-4 w-full border border-r-0 border-primary py-2 px-3 rounded-l-md focus:ring-primary focus:border-primary text-sm" placeholder="Coupon Code">
+                    <button type="submit" class="px-6 py-2 text-sm text-white bg-primary border border-primary rounded-r-md hover:bg-transparent hover:text-primary transition uppercase font-roboto font-medium">Apply</button>
+                </div>
+
+                <a href="#" class="block w-full py-3 px-4 text-center text-white bg-primary border border-primary rounded-md hover:bg-transparent hover:text-primary transition font-medium">
+                    Proceed to Checkout
+                </a>
+            </div>
+        </div>
+        <!-- ./order summary -->
+    </div>
+    <!-- ./cart wrapper -->
 
     <!-- footer -->
     <footer class="bg-white pt-16 pb-12 border-t border-gray-100">
