--- a/public/pages/product.html
+++ b/public/pages/product.html
@@ -314,6 +314,105 @@
     </div>
     <!-- ./description -->
 
+    <!-- reviews -->
+<div class="container pb-16">
+    <h3 class="border-b border-gray-200 font-roboto text-gray-800 pb-3 font-medium">Customer Reviews (4)</h3>
+    
+    <div class="mt-8 space-y-8">
+        <!-- Single Review -->
+        <div class="flex items-start border-b border-gray-200 pb-8">
+            <div class="flex-shrink-0">
+                <img src="/api/placeholder/40/40" class="rounded-full" alt="user avatar">
+            </div>
+            <div class="ml-4 flex-grow">
+                <div class="flex items-center mb-2">
+                    <h5 class="text-lg font-semibold text-gray-800">John Smith</h5>
+                    <span class="ml-4 text-sm text-gray-500">2 days ago</span>
+                </div>
+                <div class="flex gap-1 text-sm text-yellow-400 mb-2">
+                    <span><i class="fa-solid fa-star"></i></span>
+                    <span><i class="fa-solid fa-star"></i></span>
+                    <span><i class="fa-solid fa-star"></i></span>
+                    <span><i class="fa-solid fa-star"></i></span>
+                    <span><i class="fa-solid fa-star"></i></span>
+                </div>
+                <p class="text-gray-600">Perfect for my living room! The quality is exceptional and the color matches perfectly with my decor. Delivery was prompt and assembly was straightforward. Highly recommend this sofa to anyone looking for both style and comfort.</p>
+            </div>
+        </div>
+
+        <!-- Single Review -->
+        <div class="flex items-start border-b border-gray-200 pb-8">
+            <div class="flex-shrink-0">
+                <img src="/api/placeholder/40/40" class="rounded-full" alt="user avatar">
+            </div>
+            <div class="ml-4 flex-grow">
+                <div class="flex items-center mb-2">
+                    <h5 class="text-lg font-semibold text-gray-800">Sarah Johnson</h5>
+                    <span class="ml-4 text-sm text-gray-500">1 week ago</span>
+                </div>
+                <div class="flex gap-1 text-sm text-yellow-400 mb-2">
+                    <span><i class="fa-solid fa-star"></i></span>
+                    <span><i class="fa-solid fa-star"></i></span>
+                    <span><i class="fa-solid fa-star"></i></span>
+                    <span><i class="fa-solid fa-star"></i></span>
+                    <span><i class="fa-regular fa-star"></i></span>
+                </div>
+                <p class="text-gray-600">Great sofa overall, but slightly firmer than I expected. The L-shape design is perfect for my space and the fabric seems very durable. Would have given 5 stars if it was a bit softer.</p>
+            </div>
+        </div>
+
+        <!-- Single Review -->
+        <div class="flex items-start border-b border-gray-200 pb-8">
+            <div class="flex-shrink-0">
+                <img src="/api/placeholder/40/40" class="rounded-full" alt="user avatar">
+            </div>
+            <div class="ml-4 flex-grow">
+                <div class="flex items-center mb-2">
+                    <h5 class="text-lg font-semibold text-gray-800">Michael Chen</h5>
+                    <span class="ml-4 text-sm text-gray-500">2 weeks ago</span>
+                </div>
+                <div class="flex gap-1 text-sm text-yellow-400 mb-2">
+                    <span><i class="fa-solid fa-star"></i></span>
+                    <span><i class="fa-solid fa-star"></i></span>
+                    <span><i class="fa-solid fa-star"></i></span>
+                    <span><i class="fa-solid fa-star"></i></span>
+                    <span><i class="fa-solid fa-star"></i></span>
+                </div>
+                <p class="text-gray-600">Absolutely love this sofa! The Italian craftsmanship really shows in the details. It's become the centerpiece of our living room and we constantly get compliments from guests. Worth every penny!</p>
+            </div>
+        </div>
+
+        <!-- Single Review -->
+        <div class="flex items-start pb-8">
+            <div class="flex-shrink-0">
+                <img src="/api/placeholder/40/40" class="rounded-full" alt="user avatar">
+            </div>
+            <div class="ml-4 flex-grow">
+                <div class="flex items-center mb-2">
+                    <h5 class="text-lg font-semibold text-gray-800">Emma Wilson</h5>
+                    <span class="ml-4 text-sm text-gray-500">1 month ago</span>
+                </div>
+                <div class="flex gap-1 text-sm text-yellow-400 mb-2">
+                    <span><i class="fa-solid fa-star"></i></span>
+                    <span><i class="fa-solid fa-star"></i></span>
+                    <span><i class="fa-solid fa-star"></i></span>
+                    <span><i class="fa-solid fa-star"></i></span>
+                    <span><i class="fa-solid fa-star-half-stroke"></i></span>
+                </div>
+                <p class="text-gray-600">Beautiful sofa with great functionality. The material is easy to clean which is perfect for my family with kids. Only giving 4.5 stars because delivery took longer than expected, but the quality makes up for it.</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Add Review Button -->
+    <div class="mt-8">
+        <button class="bg-primary border border-primary text-white px-8 py-2 font-medium rounded hover:bg-transparent hover:text-primary transition">
+            Write a Review
+        </button>
+    </div>
+</div>
+<!-- ./reviews -->
+
     <!-- related product -->
     <div class="container pb-16">
         <h2 class="text-2xl font-medium text-gray-800 uppercase mb-6">Related products</h2>
